--- a/pom.xml
+++ b/pom.xml
@@ -96,19 +96,19 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://44.201.160.229:8081/repository/paypal-release/</url>
+	      <url>http://54.161.58.255:8081/repository/paypalnew/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://44.201.160.229:8081/repository/paypal-snapshot/</url>
+	      <url>http://54.161.58.255:8081/repository/paypal-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-		<finalName>ebay-sharedlib</finalName>
+		<finalName>paypalnew</finalName>
 		
 		<plugins>
 			<plugin>
